--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+"""
+Requirements for Rag-TIA
+Install all dependencies with:
+	pip install -r requirements.txt
+"""
 streamlit
 langchain
 langchain-community
@@ -8,3 +13,9 @@ python-dotenv
 sentence-transformers
 huggingface-hub
 torch
+accelerate
+numpy<2
+diffusers
+transformers
+scipy
+ftfy
