Updated RAG app, fixed LangChain import, added ElevenLabs troubleshooting

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit
 langchain
 langchain-community
 langchain-huggingface
+langchain-text-splitters
 chromadb
 pymongo
 python-dotenv
@@ -15,3 +16,5 @@ transformers
 scipy
 elevenlabs
 ftfy
+pypdf
+faiss-cpu
